cmake_minimum_required(VERSION 3.28)
project(Mohamad_Awad_A03)

set(CMAKE_CXX_STANDARD 17)

add_executable(Mohamad_Awad_A03 main.cpp
        Faculty.cpp
        Faculty.h
        underGrad.cpp
        underGrad.h
        Graduate.cpp
        Graduate.h
        FullTime.cpp
        FullTime.h
        PartTime.cpp
        PartTime.h
        Student.cpp
        Person.cpp)
